--- a/.github/workflows/main_merge.yml
+++ b/.github/workflows/main_merge.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Run tests and linting
         run: |
-          npm run lint && npm jest -o
+          npm run lint && npm test:ci 
         env:
           CI: true
 
