--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "test:ci": "jest -o",
     "lint": "expo lint",
     "prepare": "husky"
   },
