--- a/.github/workflows/lint_branch.yml
+++ b/.github/workflows/lint_branch.yml
@@ -4,7 +4,7 @@ name: Lint Branch Workflow
 on:
   push:
     branches:
-      - '.*'
+      - '*'
 
 jobs:
   run-linter:
@@ -17,6 +17,6 @@ jobs:
         run: npm install
 
       - name: Run linting
-        run: npm jest -o
+        run: npm lint 
         env:
           CI: true
