--- a/.github/workflows/lint_branch.yml
+++ b/.github/workflows/lint_branch.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - '*'
+  pull_request:
+    branches-ignore:
+      - '*'
 
 jobs:
   run-linter:
@@ -17,6 +20,6 @@ jobs:
         run: npm install
 
       - name: Run linting
-        run: npm lint 
+        run: npm run lint 
         env:
           CI: true
