--- a/.github/workflows/main_eas_build.yml
+++ b/.github/workflows/main_eas_build.yml
@@ -17,8 +17,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: yarn
 
+      - name: 🏗 Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.8.0
+  
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
@@ -26,7 +30,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: 🚀 Build app
         run: eas build --non-interactive
