--- a/.github/workflows/preview_eas_pr.yml
+++ b/.github/workflows/preview_eas_pr.yml
@@ -16,6 +16,11 @@ jobs:
           node-version: 18.x
           cache: yarn
 
+      - name: 🏗 Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.8.0
+
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
@@ -23,7 +28,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: 🚀 Create preview
         uses: expo/expo-github-action/preview@v8
