--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@10.8.0"
 }
