--- a/.github/workflows/main_eas_build.yml
+++ b/.github/workflows/main_eas_build.yml
@@ -28,4 +28,4 @@ jobs:
         run: pnpm install
 
       - name: 🚀 Build app
-        run: eas build --non-interactive
+        run: eas build --non-interactive --platform android --profile production
